--- a/00-فهرست.md
+++ b/00-فهرست.md
@@ -23,41 +23,41 @@
 <h3 dir=rtl align="right">فهرست</h3>
 
 <div dir=rtl align="right">
-<a href="./00-مقدمه.ipynb">1. مقدمه</a>
+<a href="./01-مقدمه.md">1. مقدمه</a>
 <br>
-<a href="./01-نحوه اجرای کد پایتون.ipynb">2. نحوه اجرای کد پایتون</a>
+<a href="./02-نحوه اجرای کد پایتون.md">2. نحوه اجرای کد پایتون</a>
 <br>
-<a href="./02-سینتکس پایه پایتون.ipynb">3. سینتکس پایه پایتون</a>
+<a href="./03-سینتکس پایه پایتون.md">3. سینتکس پایه پایتون</a>
 <br>
-<a href="./03-معناشناسی پایتون: متغیرها.ipynb">4. معناشناسی پایتون: متغیرها</a>
+<a href="./04-معناشناسی پایتون: متغیرها.md">4. معناشناسی پایتون: متغیرها</a>
 <br>
-<a href="./04-معناشناسی پایتون: عملگرها.ipynb">5. معناشناسی پایتون: عملگرها</a>
+<a href="./05-معناشناسی پایتون: عملگرها.md">5. معناشناسی پایتون: عملگرها</a>
 <br>
-<a href="./05-انواع داده اسکالر داخلی.ipynb">6. انواع داده اسکالر داخلی</a>
+<a href="./06-انواع داده اسکالر داخلی.md">6. انواع داده اسکالر داخلی</a>
 <br>
-<a href="./06-ساختارهای داده داخلی.ipynb">7. ساختارهای داده داخلی</a>
+<a href="./07-ساختارهای داده داخلی.md">7. ساختارهای داده داخلی</a>
 <br>
-<a href="./07-دستورات کنترل جریان.ipynb">8. دستورات کنترل جریان</a>
+<a href="./08-دستورات کنترل جریان.md">8. دستورات کنترل جریان</a>
 <br>
-<a href="./08-تعریف توابع.ipynb">9. تعریف توابع</a>
+<a href="./09-تعریف توابع.md">9. تعریف توابع</a>
 <br>
-<a href="./09-خطاها و استثناها.ipynb">10. خطاها و استثناها</a>
+<a href="./10-خطاها و استثناها.md">10. خطاها و استثناها</a>
 <br>
-<a href="./10-پیمایشگرها.ipynb">11. پیمایشگرها</a>
+<a href="./11-پیمایشگرها.md">11. پیمایشگرها</a>
 <br>
-<a href="./11-تعریف فشرده لیست.ipynb">12. تعریف فشرده لیست</a>
+<a href="./12-تعریف فشرده لیست.md">12. تعریف فشرده لیست</a>
 <br>
-<a href="./12-ژنراتورها و عبارات ژنراتور.ipynb">13. ژنراتورها و عبارات ژنراتور</a>
+<a href="./13-ژنراتورها و عبارات ژنراتور.md">13. ژنراتورها و عبارات ژنراتور</a>
 <br>
-<a href="./13-ماژول‌ها و بسته‌ها.ipynb">14. ماژول‌ها و بسته‌ها</a>
+<a href="./14-ماژول‌ها و بسته‌ها.md">14. ماژول‌ها و بسته‌ها</a>
 <br>
-<a href="./14-رشته‌ها و عبارات باقاعده.ipynb">15. رشته‌ها و عبارات باقاعده</a>
+<a href="./15-رشته‌ها و عبارات باقاعده.md">15. رشته‌ها و عبارات باقاعده</a>
 <br>
-<a href="./15-معرفی ابزارهای علم داده.ipynb">16. معرفی ابزارهای علم داده</a>
+<a href="./16-معرفی ابزارهای علم داده.md">16. معرفی ابزارهای علم داده</a>
 <br>
-<a href="./16-منابع برای یادگیری بیشتر.ipynb">17. منابع برای یادگیری بیشتر</a>
+<a href="./17-منابع برای یادگیری بیشتر.md">17. منابع برای یادگیری بیشتر</a>
 <br>
-<a href="./17-پیوست: کدی برای بازتولید شکل‌ها.ipynb">18. پیوست: کدی برای بازتولید شکل‌ها</a>
+<a href="./18-پیوست: کدی برای بازتولید شکل‌ها.md">18. پیوست: کدی برای بازتولید شکل‌ها</a>
 <br>
 </div>
 
